# PaperManager

./: .gitignore  README.md  pyproject.toml
src/PaperManager/: __init__.py  main.py
src/PaperManager/components/: database.py  mainwindow.py  signals.py  tasks.py
src/PaperManager/components/filesystem_viewer/: fileviewer.py  fsviewer.py  tagviewer.py
src/PaperManager/components/pdf_viewer/: pdfviewer.py
