[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/PaperManager/__init__.py"

[project]
name = "PaperManager"
dynamic = ["version"]
authors = [
  { name="Mingze Gao", email="mingze.gao@sydney.edu.au" },
]
description = ""
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "PyQt6==6.4.0",
  "PyMuPDF==1.21.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mgao6767/PaperManager"
"Bug Tracker" = "https://github.com/mgao6767/PaperManager/issues"

[project.gui-scripts]
pm = "PaperManager.main:run"

